--- a/Public/Html/index.html
+++ b/Public/Html/index.html
@@ -14,6 +14,10 @@
     <input id="precio" type="number" placeholder="Precio" required>
     <input id="cantidad" type="number" placeholder="Cantidad" required>
     <button type="submit">Guardar</button>
+
+    
+    <button type="button" onclick="location.href='Principal.html'">Ir a Principal</button>
+
 </form>
 
 <ul id="listaProductos"></ul>
