--- a/Public/Html/index.html
+++ b/Public/Html/index.html
@@ -13,9 +13,10 @@
     <input id="nombre" placeholder="Nombre" required>
     <input id="precio" type="number" placeholder="Precio" required>
     <input id="cantidad" type="number" placeholder="Cantidad" required>
+    <input id="imagen" type="text" placeholder="URL de la imagen" required>
     <button type="submit">Guardar</button>
 
-    
+
     <button type="button" onclick="location.href='Principal.html'">Ir a Principal</button>
 
 </form>
