--- a/Public/Html/index.html
+++ b/Public/Html/index.html
@@ -9,6 +9,7 @@
 
 <h1>Gestión de Productos</h1>
 
+hola
 <form id="formProducto">
     <input id="nombre" placeholder="Nombre" required>
     <input id="precio" type="number" placeholder="Precio" required>
