--- a/Public/Html/index.html
+++ b/Public/Html/index.html
@@ -16,6 +16,8 @@
     <button type="submit">Guardar</button>
 </form>
 
+tovar
+
 <ul id="listaProductos"></ul>
 
 <script src="../JavaScript/app.js"></script>
