--- a/Public/Html/index.html
+++ b/Public/Html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../Css/styles.css">
 </head>
 <body>
-            //Mireya
+            //Mireya .
 <h1>Gestión de Productos</h1>
 
 hola
