--- a/Public/Html/Principal.html
+++ b/Public/Html/Principal.html
@@ -38,7 +38,11 @@
                 <!-- ICONO: Lupa para búsqueda -->
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <!-- ICONO: Carrito de compras -->
-                <i class="fa-solid fa-cart-shopping"></i>
+                 
+                <a href="carrito.html" class="carrito-link">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+
                 <!-- ICONO: Usuario/perfil -->
                 <i class="fa-solid fa-user"></i>
             </div>
@@ -124,7 +128,7 @@
             </div>
         </div>
 
-        
+
     </section>
 
     <!-- PIE DE PÁGINA -->
@@ -152,7 +156,7 @@
             </div>
         </div>
     </footer>
-<script src="../JavaScript/principal.js"></script>
+    <script src="../JavaScript/principal.js"></script>
 </body>
 
 </html>
