--- a/Public/Html/carrito.html
+++ b/Public/Html/carrito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Carrito de compras</title>
-    <link rel="stylesheet" href="carrito.css">
+    <link rel="stylesheet" href="../Css/carrito.css">
 </head>
 <body>
 
