--- a/Public/Html/carrito.html
+++ b/Public/Html/carrito.html
@@ -30,23 +30,8 @@
             Este bloque se va a repetir por cada producto
             cuando se conecte con la base de datos
         ====================== -->
-        <div class="item">
-            <img src="" alt="Producto">
+       <div id="carrito"></div>
 
-            <div class="info">
-                <h3 class="product-name">Nombre del producto</h3>
-                <p class="product-brand">Marca / descripción</p>
-            </div>
-
-            <div class="actions">
-                <button class="delete" title="Eliminar">🗑</button>
-
-                <div class="qty">
-                    <label>Cantidad</label>
-                    <input type="number" min="1">
-                </div>
-            </div>
-        </div>
 
         <!-- FIN ITEM -->
 
@@ -64,11 +49,6 @@
             </li>
         </ul>
 
-        <div class="promo">
-            <input type="text" placeholder="Código promocional">
-            <button>Aplicar</button>
-        </div>
-
         <div class="total">
             <span>Total</span>
             <span class="total-value"></span>
@@ -79,5 +59,6 @@
 
 </div>
 
+<script src="../Js/carrito.js"></script>
 </body>
 </html>
