--- a/Public/Html/Principal.html
+++ b/Public/Html/Principal.html
@@ -84,7 +84,7 @@
     <section class="products-section">
         <div class="section-header">
             <div class="container">
-                <h2><i class="fa-solid fa-shoe-prints"></i> Productos en tendencia</h2>
+                <h2><i class="fa-solid fa-shoe-prints"></i> Productos Nuevos</h2>
             </div>
         </div>
 
@@ -118,45 +118,7 @@
     </section>
 
 
-    <!-- SEGUNDA SECCIÓN DE PRODUCTOS - Productos clásicos -->
-    <section class="products-section">
-        <!-- CABECERA CON CLASE DIFERENTE (accent-blue) para variar el estilo -->
-        <div class="section-header accent-blue">
-            <div class="container">
-                <h2><i class="fa-solid fa-shoe-prints"></i> Clásicos</h2>
-            </div>
-        </div>
 
-        <!-- CONTENEDOR GENERAL DEL CARRUSEL -->
-        <div class="carousel-container">
-
-            <!-- BOTÓN IZQUIERDO -->
-            <button class="carousel-btn left" id="btnPrev">
-                &#10094;
-            </button>
-
-            <!-- VENTANA VISIBLE (recorta lo que se sale) -->
-            <div class="carousel-viewport">
-
-                <!--
-                TRACK DEL CARRUSEL
-                Aquí JavaScript insertará dinámicamente los productos
-            -->
-                <div class="carousel-track" id="carouselTrack">
-                    <!-- PRODUCTOS GENERADOS CON JS -->
-                </div>
-
-            </div>
-
-            <!-- BOTÓN DERECHO -->
-            <button class="carousel-btn right" id="btnNext">
-                &#10095;
-            </button>
-
-        </div>
-
-
-    </section>
 
     <!-- PIE DE PÁGINA -->
     <footer>
