--- a/Public/Html/log.html
+++ b/Public/Html/log.html
@@ -139,6 +139,8 @@
 
                 <button type="submit" class="btn-submit">Sign In</button>
 
+
+                <a href="registro.html" class="forgot-password">Registrarse</a>
             </form>
 
             <script src="registro.js"></script>
