--- a/Public/Html/carrito.html
+++ b/Public/Html/carrito.html
@@ -55,10 +55,11 @@
         </div>
 
         <button class="checkout">Finalizar compra</button>
+
     </aside>
 
 </div>
 
-<script src="../Js/carrito.js"></script>
+<script src="../JavaScript/carrito.js"></script>
 </body>
 </html>
